# fluxchat-desktop

./: README.md  package-lock.json  package.json  vitest.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config_store.rs  connection.rs  lib.rs  main.rs  messages.rs  state.rs  storage.rs
src/__tests__/: logCoalescer.test.ts
src/lib/: logCoalescer.ts
